--- a/templates/demo.html
+++ b/templates/demo.html
@@ -30,22 +30,16 @@
                     });
                 });
 
-                $("input[name='start']").on("click", function() {
-                    socketio.emit("start");
-                });
-
-                $("input[name='stop']").on("click", function() {
-                    socketio.emit("stop");
-                });
                 $("input[name='update']").on("click", function() {
                     var mode = $("input[name='mode']")['0'].value;
+                    var colour = $("input[name=colour]")['0'].value;
                     var value = $("input[name='colori']")['0'].value;
                     // #XXXXXX -> ["XX", "XX", "XX"]
                     value = value.match(/[A-Za-z0-9]{2}/g);
 
                     // ["XX", "XX", "XX"] -> [n, n, n]
                     value = value.map(function(v) { return parseInt(v, 16) });
-                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode});
+                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode,'colour':colour});
                 });
 
 
@@ -62,14 +56,12 @@
 
                 <form id="ctrl_form">
                     <input type="button" name="connect" value="connect" />
-                    <input type="button" name="start" value="start" />
-                    <input type="button" name="stop" value="stop" />
                     <input type="button" name="update" value="update" />
                     <input type="color" name="colori" value="#000000" />
-                    <input type="number" name="mode" value="0" min="0" max="2" />
+                    <input type="number" name="mode" value="0" min="0" max="4" />
+                    <input type="number" name="mode" value="0" min="0" max="3" />
                  </form>
             </div>
-
             <div class="report">
                 ...
             </div>
