--- a/templates/demo.html
+++ b/templates/demo.html
@@ -58,8 +58,10 @@
                     <input type="button" name="connect" value="connect" />
                     <input type="button" name="update" value="update" />
                     <input type="color" name="colori" value="#000000" />
+                    <label>mode</label>
                     <input type="number" name="mode" value="0" min="0" max="4" />
-                    <input type="number" name="mode" value="0" min="0" max="3" />
+                    <label>colour</label>
+                    <input type="number" name="colour" value="0" min="0" max="3" />
                  </form>
             </div>
             <div class="report">
