--- a/templates/demo.html
+++ b/templates/demo.html
@@ -64,6 +64,14 @@
                     <input type="number" name="colour" value="0" min="0" max="3" />
                  </form>
             </div>
+            <ul>
+                <li>mode 0: colorWipe preset colour (1:red 2:green 3:blue 4:white)/li>
+                <li>mode 1: theaterChase</li>
+                <li>mode 2: rainbow</li>
+                <li>mode 3: rainbowCycle</li>
+                <li>mode 4: theaterChaseRainbow</li>
+                <li>mode 5: colorWipe custom colour</li>
+            </ul>
             <div class="report">
                 ...
             </div>
