--- a/templates/demo.html
+++ b/templates/demo.html
@@ -59,13 +59,13 @@
                     <input type="button" name="update" value="update" />
                     <input type="color" name="colori" value="#000000" />
                     <label>mode</label>
-                    <input type="number" name="mode" value="0" min="0" max="4" />
+                    <input type="number" name="mode" value="0" min="0" max="5" />
                     <label>colour</label>
                     <input type="number" name="colour" value="0" min="0" max="3" />
                  </form>
             </div>
             <ul>
-                <li>mode 0: colorWipe preset colour (1:red 2:green 3:blue 4:white)/li>
+                <li>mode 0: colorWipe preset colour (0:red 1:green 2:blue 3:white)</li>
                 <li>mode 1: theaterChase</li>
                 <li>mode 2: rainbow</li>
                 <li>mode 3: rainbowCycle</li>
