--- a/templates/demo.html
+++ b/templates/demo.html
@@ -3,8 +3,10 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Demo - background worker</title>
-
+        <title>LEDPI</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script-->
         <!--script src="/socket.io/socket.io.js"></script-->
@@ -16,30 +18,28 @@
 
                 var socketio = null;
                 var namespace = "/work"
-                $("input[name='connect']").on("click", function() {
+                console.log("connect");
 
-                    console.log("connect");
+                socketio = io(namespace);
 
-                    socketio = io(namespace);
-
-                    socketio.off().on("re_connect", function(msg) {
-                        $(".report").append(msg.msg + "<br />");
-                    });
-                    socketio.on("update", function(msg) {
-                        $(".report").append(msg.msg + "<br />");
-                    });
+                socketio.off().on("re_connect", function(msg) {
+                    $(".report").append(msg.msg + "<br />");
+                });
+                socketio.on("update", function(msg) {
+                    $(".report").append(msg.msg + "<br />");
                 });
 
                 $("input[name='update']").on("click", function() {
                     var mode = $("input[name='mode']")['0'].value;
                     var colour = $("input[name=colour]")['0'].value;
                     var value = $("input[name='colori']")['0'].value;
+                    var speed = $("input[name='speed']")['0'].value;
                     // #XXXXXX -> ["XX", "XX", "XX"]
                     value = value.match(/[A-Za-z0-9]{2}/g);
 
                     // ["XX", "XX", "XX"] -> [n, n, n]
                     value = value.map(function(v) { return parseInt(v, 16) });
-                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode,'colour':colour});
+                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode,'colour':colour, 'speed':speed});
                 });
 
 
@@ -55,16 +55,29 @@
             <div class="control">
 
                 <form id="ctrl_form">
-                    <input type="button" name="connect" value="connect" />
+                    <div class="mb-3">
+                        <label class="form-label">mode</label>
+                        <input class="form-control" type="number" name="mode" value="-1" min="0" max="5" />
+                    </div>
+                    <div class="mb-3">
+                               <label class="form-label">speed (ms)</label>
+                        <input class="form-control" type="number" name="speed" value="100" min="0" max="1000" />
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Colour (mode 0)</label>
+                        <input class="form-control" type="number" name="colour" value="0" min="0" max="3" />
+                    </div>
+                    <div class="mb-3">
+                         <label class="form-label">Custom Colour(mode 5)</label>
+                        <input class="form-control" type="color" name="colori" value="#000000" />
+                    </div>
+                       
                     <input type="button" name="update" value="update" />
-                    <input type="color" name="colori" value="#000000" />
-                    <label>mode</label>
-                    <input type="number" name="mode" value="0" min="0" max="5" />
-                    <label>colour</label>
-                    <input type="number" name="colour" value="0" min="0" max="3" />
+              
                  </form>
             </div>
             <ul>
+                <li>mode -1: off</li>
                 <li>mode 0: colorWipe preset colour (0:red 1:green 2:blue 3:white)</li>
                 <li>mode 1: theaterChase</li>
                 <li>mode 2: rainbow</li>
