--- a/templates/demo.html
+++ b/templates/demo.html
@@ -50,9 +50,9 @@
     </head>
 
     <body>
-        <div class="main_container" >
+        <div class="container" >
 
-            <div class="control">
+            <div class="container">
 
                 <form id="ctrl_form">
                     <div class="mb-3">
@@ -76,7 +76,9 @@
               
                  </form>
             </div>
-            <ul>
+            <div class="container">
+                <h3>Modes:</h3>
+                <ul>
                 <li>mode -1: off</li>
                 <li>mode 0: colorWipe preset colour (0:red 1:green 2:blue 3:white)</li>
                 <li>mode 1: theaterChase</li>
@@ -84,10 +86,14 @@
                 <li>mode 3: rainbowCycle</li>
                 <li>mode 4: theaterChaseRainbow</li>
                 <li>mode 5: colorWipe custom colour</li>
-            </ul>
-            <div class="report">
-                ...
+                </ul>
             </div>
+            <div class="container">
+                <div class="report">
+                    ...
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
