--- a/templates/demo.html
+++ b/templates/demo.html
@@ -52,7 +52,7 @@
     <body>
         <div class="container" >
 
-            <div class="container">
+            <div class="py-5 text-center">
 
                 <form id="ctrl_form">
                     <div class="mb-3">
@@ -76,7 +76,7 @@
               
                  </form>
             </div>
-            <div class="container">
+            <div class="py-5 text-center">
                 <h3>Modes:</h3>
                 <ul>
                 <li>mode -1: off</li>
@@ -88,7 +88,7 @@
                 <li>mode 5: colorWipe custom colour</li>
                 </ul>
             </div>
-            <div class="container">
+            <div class="py-5 text-center">
                 <div class="report">
                     ...
                 </div>
