--- a/templates/demo.html
+++ b/templates/demo.html
@@ -7,6 +7,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <style>
+            .container {
+                max-width: 960px;
+            }
+
+            .border-top { border-top: 1px solid #e5e5e5; }
+            .border-bottom { border-bottom: 1px solid #e5e5e5; }
+            .border-top-gray { border-top-color: #adb5bd; }
+
+            .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+            .lh-condensed { line-height: 1.25; }
+        </style>
+        
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
         <!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script-->
         <!--script src="/socket.io/socket.io.js"></script-->
@@ -51,8 +65,11 @@
 
     <body>
         <div class="container" >
-
             <div class="py-5 text-center">
+                <h2>LED PI Control</h2>
+                <p class="lead">have fun</p>
+            </div>
+            <div class="">
 
                 <form id="ctrl_form">
                     <div class="mb-3">
@@ -76,7 +93,7 @@
               
                  </form>
             </div>
-            <div class="py-5 text-center">
+            <div class="">
                 <h3>Modes:</h3>
                 <ul>
                 <li>mode -1: off</li>
@@ -88,12 +105,19 @@
                 <li>mode 5: colorWipe custom colour</li>
                 </ul>
             </div>
-            <div class="py-5 text-center">
+            <div class="">
                 <div class="report">
                     ...
                 </div>
             </div>
-            
+            <footer class="my-5 pt-5 text-muted text-center text-small">
+                <p class="mb-1">© 2021-2022 Nathan W</p>
+                <ul class="list-inline">
+                  <li class="list-inline-item"><a href="#">Privacy</a></li>
+                  <li class="list-inline-item"><a href="#">Terms</a></li>
+                  <li class="list-inline-item"><a href="#">Support</a></li>
+                </ul>
+              </footer>
         </div>
     </body>
 </html>
