--- a/templates/demo.html
+++ b/templates/demo.html
@@ -103,6 +103,8 @@
                 <li>mode 3: rainbowCycle</li>
                 <li>mode 4: theaterChaseRainbow</li>
                 <li>mode 5: colorWipe custom colour</li>
+                <li>mode 6: vline</li>
+                <li>mode 7: hline</li>
                 </ul>
             </div>
             <div class="">
