--- a/templates/demo.html
+++ b/templates/demo.html
@@ -105,6 +105,7 @@
                 <li>mode 5: colorWipe custom colour</li>
                 <li>mode 6: vline</li>
                 <li>mode 7: hline</li>
+                <li>mode 8: ScrollText</li>
                 </ul>
             </div>
             <div class="">
