--- a/templates/demo.html
+++ b/templates/demo.html
@@ -45,7 +45,6 @@
 
                 $("input[name='update']").on("click", function() {
                     var mode = $("input[name='mode']")['0'].value;
-                    var colour = $("input[name=colour]")['0'].value;
                     var value = $("input[name='colori']")['0'].value;
                     var speed = $("input[name='speed']")['0'].value;
                     var customtext = $("input[name='customtext']")['0'].value;
@@ -54,7 +53,7 @@
 
                     // ["XX", "XX", "XX"] -> [n, n, n]
                     value = value.map(function(v) { return parseInt(v, 16) });
-                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode,'colour':colour, 'speed':speed,'customtext':customtext});
+                    socketio.emit("update", {'r':value[0],'g':value[1],'b':value[2],'mode':mode, 'speed':speed,'customtext':customtext});
                 });
 
 
@@ -78,19 +77,15 @@
                         <input class="form-control" type="number" name="mode" value="3" min="-1" max="5" />
                     </div>
                     <div class="mb-3">
-                               <label class="form-label">speed (ms)</label>
+                               <label class="form-label">speed (ms) (modes: all)</label>
                         <input class="form-control" type="number" name="speed" value="100" min="0" max="1000" />
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Colour (mode 0)</label>
-                        <input class="form-control" type="number" name="colour" value="0" min="0" max="3" />
-                    </div>
-                    <div class="mb-3">
-                         <label class="form-label">Custom Colour(mode 5)</label>
+                         <label class="form-label">Custom Colour(modes: 0,6,7,8)</label>
                         <input class="form-control" type="color" name="colori" value="#000000" />
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Custom Text(mode 8)</label>
+                        <label class="form-label">Custom Text(modes: 8)</label>
                        <input class="form-control" type="text" name="customtext" value="Hello World" />
                    </div> 
                     <input type="button" name="update" value="update" />
@@ -101,12 +96,11 @@
                 <h3>Modes:</h3>
                 <ul>
                 <li>mode -1: off</li>
-                <li>mode 0: colorWipe preset colour (0:red 1:green 2:blue 3:white)</li>
+                <li>mode 0: colorWipe</li>
                 <li>mode 1: theaterChase</li>
                 <li>mode 2: rainbow</li>
                 <li>mode 3: rainbowCycle</li>
                 <li>mode 4: theaterChaseRainbow</li>
-                <li>mode 5: colorWipe custom colour</li>
                 <li>mode 6: vline</li>
                 <li>mode 7: hline</li>
                 <li>mode 8: ScrollText</li>
