--- a/templates/demo.html
+++ b/templates/demo.html
@@ -29,8 +29,8 @@
         <script type="text/javascript" charset="utf-8">
 
             function componentToHex(c) {
-            var hex = c.toString(16);
-            return hex.length == 1 ? "0" + hex : hex;
+                var hex = c.toString(16);
+                return hex.length == 1 ? "0" + hex : hex;
             }
 
             function rgbToHex(r, g, b) {
@@ -58,7 +58,7 @@
                         $("input[name='speed']")['0'].value = msg.msg.speed;
                         $("input[name='customtext']")['0'].value = msg.msg.customtext;
 
-                        hex = rgbToHex(msg.msg.r, msg.msg.g, msg.msg.b);
+                        hex = rgbToHex(parseInt(msg.msg.r), parseInt(msg.msg.g), parseInt(msg.msg.b));
                         $("input[name='colori']")['0'].value = hex;
 
                     }
