--- a/templates/demo.html
+++ b/templates/demo.html
@@ -58,7 +58,7 @@
                     console.log(msg.msg.mode)
                     if (msg.msg.nodata != 'true'){
                         $("input[name='mode']")['0'].value = parseInt(msg.msg.mode);
-                        $("input[name='speed']")['0'].value = pasreInt(msg.msg.speed);
+                        $("input[name='speed']")['0'].value = parseInt(msg.msg.speed);
                         $("input[name='customtext']")['0'].value = msg.msg.customtext;
 
                         hex = rgbToHex(parseInt(msg.msg.r), parseInt(msg.msg.g), parseInt(msg.msg.b));
