--- a/templates/demo.html
+++ b/templates/demo.html
@@ -57,6 +57,7 @@
                     console.log(msg.msg.nodata)
                     console.log(msg.msg.mode)
                     if (msg.msg.nodata){
+                        console.log("here")
                         $("input[name='mode']")['0'].value = parseInt(msg.msg.mode);
                         $("input[name='speed']")['0'].value = parseInt(msg.msg.speed);
                         $("input[name='customtext']")['0'].value = msg.msg.customtext;
