--- a/templates/demo.html
+++ b/templates/demo.html
@@ -56,7 +56,7 @@
                     console.log("here")
                     console.log(msg.msg.nodata)
                     console.log(msg.msg.mode)
-                    if (msg.msg.nodata){
+                    if (!msg.msg.nodata){
                         console.log("here")
                         $("input[name='mode']")['0'].value = parseInt(msg.msg.mode);
                         $("input[name='speed']")['0'].value = parseInt(msg.msg.speed);
