--- a/templates/demo.html
+++ b/templates/demo.html
@@ -19,6 +19,11 @@
             .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 
             .lh-condensed { line-height: 1.25; }
+
+            input:invalid {
+                box-shadow: 0 0 5px 1px red;
+            }
+
         </style>
         
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
